0-deployment/pre-servicea-deploy.yaml
# Copyright 2017 iPao Authors
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# servicea service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: servicea
  labels:
    app: servicea
    service: servicea
spec:
  ports:
  - name: http
    port: 1323
  selector:
    app: servicea

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea-v1
  labels:
    app: servicea
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicea
      version: v1
  template:
    metadata:
      labels:
        app: servicea
        version: v1
    spec:
      serviceAccountName: svcacc-servicea
      containers:
      - name: servicea
        image: techinno/service_a:1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1323
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
---
